--- a/app/root/content/home-hero_001.html
+++ b/app/root/content/home-hero_001.html
@@ -1,20 +1,100 @@
-<div class="row">
-	<div class="column xs-col-8 sm-col-5 lg-col-3 xl-col-5">
-		<img
-			src="src/assets/img/about/about_mm.jpg"
-			class="img-responsive"
-			alt="Markus Morley"
-		/>
-	</div>
-
-	<div class="column xl-col-7">
-		<h1 class="heading">
-			<span class="theme-color">
-				My abillity to
-				<span class="text-primary">Overview Complex Situation</span>
-				will help you to get inbound with
-				<span class="text-primary">User Centrification</span>
-			</span>
-		</h1>
+<div class="container container-xl">
+	<div class="home-hero_001">
+		<div class="row">
+			<div class="home-hero_001__action">
+				<a href="">
+					<svg
+						xmlns="http://www.w3.org/2000/svg"
+						xmlns:xlink="http://www.w3.org/1999/xlink"
+						width="416"
+						height="416"
+						viewBox="0 0 416 416"
+					>
+						<defs>
+							<clipPath id="clip-path">
+								<rect width="39" height="27" fill="none" />
+							</clipPath>
+						</defs>
+						<g
+							id="Gruppe_6"
+							data-name="Gruppe 6"
+							transform="translate(-149 -167)"
+						>
+							<g
+								id="Ellipse"
+								transform="translate(149 167)"
+								fill="#000"
+								stroke="#fff"
+								stroke-miterlimit="10"
+								stroke-width="1"
+								opacity="0.4"
+							>
+								<circle
+									cx="208"
+									cy="208"
+									r="208"
+									stroke="none"
+								/>
+								<circle
+									cx="208"
+									cy="208"
+									r="207.5"
+									fill="none"
+								/>
+							</g>
+							<g id="Gruppe_5" data-name="Gruppe 5">
+								<g
+									id="Arrow_Right_White"
+									data-name="Arrow Right White"
+									transform="translate(315 408)"
+									clip-path="url(#clip-path)"
+								>
+									<path
+										id="Path"
+										d="M26.113,0l-1.7,1.985s7.122,7.147,10.174,9.926C23.882,11.8,0,11.912,0,11.912v2.382s23.89-.087,34.591,0c-3.052,3.176-10.174,10.324-10.174,10.324L26.113,27,39,13.1Z"
+										fill="#f7f8fa"
+									/>
+								</g>
+								<text
+									id="check_new_look_books"
+									data-name="check new look books"
+									transform="translate(315 323)"
+									fill="#fff"
+									font-size="14"
+									font-family="FuturaPT-Medium, Futura PT"
+									font-weight="500"
+									letter-spacing="0.26em"
+								>
+									<tspan x="0" y="14">CHECK</tspan>
+									<tspan x="0" y="32">NEW</tspan>
+									<tspan x="0" y="50">UX</tspan>
+									<tspan x="0" y="68">EXPERIMENTS</tspan>
+								</text>
+							</g>
+						</g>
+					</svg>
+				</a>
+			</div>
+			<div class="column xl-col-12">
+				<h1 class="home-hero_001__heading">
+					<span class="theme-color">
+						My abillity to
+						<span class="theme-highlight"
+							>Overview Complex Situation</span
+						>
+						will help you to get inbound with
+						<span class="theme-highlight">User Centrification</span>
+					</span>
+				</h1>
+			</div>
+			<div class="home-hero_001__copyright">
+				<div class="home-hero_001__instagramm">
+					<a href="insta">instagram</a>
+				</div>
+				<div class="home-hero_001__contact">
+					<a href="/">contact</a>
+				</div>
+			</div>
+		</div>
 	</div>
 </div>
