structured contenet home

--- a/app/root/content/home-about.html
+++ b/app/root/content/home-about.html
@@ -3,8 +3,8 @@
 		<div class="row">
 			<div class="column lg-col-4">
 				<img
-					src="src/assets/img/paralax_about/markus_tag.png"
-					class="img-responsive about-tag"
+					src="src/assets/img/paralax_about/morley_portrait-tags-tag.png"
+					class="about-tag"
 					alt="Markus Morley"
 				/>
 			</div>
