--- a/app/root/content/home-how copy.html
+++ b/app/root/content/home-how copy.html
@@ -1,15 +1,18 @@
-<div class="home-how">
-	<div class="container container-2x">
+<div class="container container-xl">
+	<div class="about">
 		<div class="row">
-			<div class="column xs-col-12 xl-col-12">
-				<div class="home-how__hero">
-					<div class="home-how__content text-center">
-						<p class="label">Some kind of workflow</p>
-						<h2>Thats how i work</h2>
-						<div class="home-how__list-wrap">
-							<div class="home-how__list">
+			<div class="column xl-col-11">
+				<div class="section section-our-services">
+					<div class="section-our-services__wrap">
+						<div class="section-our-services__copy">
+							<p class="label">Some kind of workflow</p>
+							<h2>Thats how i work</h2>
+						</div>
+
+						<div class="section-case-studies-list__list-wrap">
+							<div class="section-case-studies-list__list">
 								<h4>Understand the user needs</h4>
-								<div class="home-how__link">
+								<div class="section-case-studies-list__link">
 									<p>
 										reading reddit and research communitys
 										are essential user research. closed beta
@@ -20,11 +23,11 @@
 								</div>
 							</div>
 
-							<div class="home-how__list">
+							<div class="section-case-studies-list__list">
 								<h4>
 									Design the solution and show up problems
 								</h4>
-								<div class="home-how__link">
+								<div class="section-case-studies-list__link">
 									<p>
 										Great User Experiences start with sturdy
 										concept and a clear stradegy. testing
@@ -47,9 +50,9 @@
 								</div>
 							</div>
 
-							<div class="home-how__list">
+							<div class="section-case-studies-list__list">
 								<h4>Build the product</h4>
-								<div class="home-how__link">
+								<div class="section-case-studies-list__link">
 									<p>
 										Unifying the concepts with technological
 										architecture needs is the final step,
@@ -64,55 +67,6 @@
 								</div>
 							</div>
 						</div>
-
-						<div class="home-how__arrow">
-							<img
-								src="src/assets/img/ui/Arrow Down White Transparent.svg"
-								alt=""
-							/>
-						</div>
-					</div>
-					<div class="home-how__image-001">
-						<img
-							src="src/assets/img/photography/black/Template_index_009.jpg"
-							class="img-responsive"
-							alt="Markus Morley"
-						/>
-					</div>
-					<div class="home-how__image-006">
-						<img
-							src="src/assets/img/photography/black/Template_index_001.jpg"
-							class="img-responsive"
-							alt="Markus Morley"
-						/>
-					</div>
-					<div class="home-how__image-005">
-						<img
-							src="src/assets/img/photography/black/Template_index_003.jpg"
-							class="img-responsive"
-							alt="Markus Morley"
-						/>
-					</div>
-					<div class="home-how__image-004">
-						<img
-							src="src/assets/img/photography/black/Template_index_007.jpg"
-							class="img-responsive"
-							alt="Markus Morley"
-						/>
-					</div>
-					<div class="home-how__image-003">
-						<img
-							src="src/assets/img/photography/black/Template_index_002.jpg"
-							class="img-responsive"
-							alt="Markus Morley"
-						/>
-					</div>
-					<div class="home-how__image-002">
-						<img
-							src="src/assets/img/photography/black/Black_015.jpg"
-							class="img-responsive"
-							alt="Markus Morley"
-						/>
 					</div>
 				</div>
 			</div>
