--- a/app/root/content/home-teaser.html
+++ b/app/root/content/home-teaser.html
@@ -9,11 +9,11 @@
 							<p>Looking for all kinds of details.</p>
 							<p>User Expirience is everywhere</p>
 						</div>
-						<a
-							class="btn button button--inverted"
-							href="/manifesto/"
-							>This is me manifesto</a
-						>
+						<div class="btn-cta">
+							<a class="" href="/people/erik-spiekermann/"
+								><span>see more from Markus</span></a
+							>
+						</div>
 					</div>
 				</div>
 			</div>
