--- a/app/root/content/about-tools.html
+++ b/app/root/content/about-tools.html
@@ -18,12 +18,12 @@
 			</p>
 
 			<div>
-				<div class="subcategory">
+				<div class="about-tools__subcategory">
 					<h2>
 						<span><a href="/tools/HTML-Tools">HTML Tools</a></span
 						><span><span class="">Workflow</span></span>
 					</h2>
-					<div class="tool-list row">
+					<div class="about-tools__tool-list row">
 						<div
 							class="column lg-col-4 md-col-4 sm-col-6 xs-col-12"
 						>
@@ -49,18 +49,16 @@
 				</div>
 			</div>
 			<div>
-				<div class="subcategory">
+				<div class="about-tools__subcategory">
 					<h2>
-						<span
-							><a href="/tools/CSS-Tools">CSS Tools</a
-							><!-- react-text: 11225 -->&nbsp;&gt;&nbsp;<!-- /react-text --></span
+						<span><a href="/tools/CSS-Tools">CSS Tools</a></span
 						><span
 							><span class=""
 								>Desktop &amp; Mobile CSS Frameworks</span
 							></span
 						>
 					</h2>
-					<div class="tool-list row">
+					<div class="about-tools__tool-list row">
 						<div
 							class="column lg-col-4 md-col-4 sm-col-6 xs-col-12"
 						>
@@ -151,14 +149,14 @@
 						</div>
 					</div>
 				</div>
-				<div class="subcategory">
+				<div class="about-tools__subcategory">
 					<h2>
 						<span
 							><a href="/tools/CSS-Tools">CSS Tools</a
 							><!-- react-text: 11265 -->&nbsp;&gt;&nbsp;<!-- /react-text --></span
 						><span><span class="">Transpiling</span></span>
 					</h2>
-					<div class="tool-list row">
+					<div class="about-tools__tool-list row">
 						<div
 							class="column lg-col-4 md-col-4 sm-col-6 xs-col-12"
 						>
@@ -183,14 +181,14 @@
 						</div>
 					</div>
 				</div>
-				<div class="subcategory">
+				<div class="about-tools__subcategory">
 					<h2>
 						<span
 							><a href="/tools/CSS-Tools">CSS Tools</a
 							><!-- react-text: 11281 -->&nbsp;&gt;&nbsp;<!-- /react-text --></span
 						><span><span class="">References</span></span>
 					</h2>
-					<div class="tool-list row">
+					<div class="about-tools__tool-list row">
 						<div
 							class="column lg-col-4 md-col-4 sm-col-6 xs-col-12"
 						>
@@ -217,14 +215,14 @@
 						</div>
 					</div>
 				</div>
-				<div class="subcategory">
+				<div class="about-tools__subcategory">
 					<h2>
 						<span
 							><a href="/tools/CSS-Tools">CSS Tools</a
 							><!-- react-text: 11297 -->&nbsp;&gt;&nbsp;<!-- /react-text --></span
 						><span><span class="">Linting/Hinting</span></span>
 					</h2>
-					<div class="tool-list row">
+					<div class="about-tools__tool-list row">
 						<div
 							class="column lg-col-4 md-col-4 sm-col-6 xs-col-12"
 						>
@@ -249,14 +247,14 @@
 						</div>
 					</div>
 				</div>
-				<div class="subcategory">
+				<div class="about-tools__subcategory">
 					<h2>
 						<span
 							><a href="/tools/CSS-Tools">CSS Tools</a
 							><!-- react-text: 11313 -->&nbsp;&gt;&nbsp;<!-- /react-text --></span
 						><span><span class="">Optimizer</span></span>
 					</h2>
-					<div class="tool-list row">
+					<div class="about-tools__tool-list row">
 						<div
 							class="column lg-col-4 md-col-4 sm-col-6 xs-col-12"
 						>
@@ -281,14 +279,14 @@
 						</div>
 					</div>
 				</div>
-				<div class="subcategory">
+				<div class="about-tools__subcategory">
 					<h2>
 						<span
 							><a href="/tools/CSS-Tools">CSS Tools</a
 							><!-- react-text: 11329 -->&nbsp;&gt;&nbsp;<!-- /react-text --></span
 						><span><span class="">Architecting CSS</span></span>
 					</h2>
-					<div class="tool-list row">
+					<div class="about-tools__tool-list row">
 						<div
 							class="column lg-col-4 md-col-4 sm-col-6 xs-col-12"
 						>
@@ -357,7 +355,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="subcategory">
+				<div class="about-tools__subcategory">
 					<h2>
 						<span
 							><a href="/tools/CSS-Tools">CSS Tools</a
@@ -368,7 +366,7 @@
 							></span
 						>
 					</h2>
-					<div class="tool-list row">
+					<div class="about-tools__tool-list row">
 						<div
 							class="column lg-col-4 md-col-4 sm-col-6 xs-col-12"
 						>
@@ -397,7 +395,7 @@
 				</div>
 			</div>
 			<div>
-				<div class="subcategory">
+				<div class="about-tools__subcategory">
 					<h2>
 						<span
 							><a href="/tools/JavaScript-Tools"
@@ -409,7 +407,7 @@
 							></span
 						>
 					</h2>
-					<div class="tool-list row">
+					<div class="about-tools__tool-list row">
 						<div
 							class="column lg-col-4 md-col-4 sm-col-6 xs-col-12"
 						>
@@ -432,7 +430,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="subcategory">
+				<div class="about-tools__subcategory">
 					<h2>
 						<span
 							><a href="/tools/JavaScript-Tools"
@@ -444,7 +442,7 @@
 							></span
 						>
 					</h2>
-					<div class="tool-list row">
+					<div class="about-tools__tool-list row">
 						<div
 							class="column lg-col-4 md-col-4 sm-col-6 xs-col-12"
 						>
@@ -469,7 +467,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="subcategory">
+				<div class="about-tools__subcategory">
 					<h2>
 						<span
 							><a href="/tools/JavaScript-Tools"
@@ -481,7 +479,7 @@
 							></span
 						>
 					</h2>
-					<div class="tool-list row">
+					<div class="about-tools__tool-list row">
 						<div
 							class="column lg-col-4 md-col-4 sm-col-6 xs-col-12"
 						>
@@ -506,7 +504,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="subcategory">
+				<div class="about-tools__subcategory">
 					<h2>
 						<span
 							><a href="/tools/JavaScript-Tools"
@@ -518,7 +516,7 @@
 							></span
 						>
 					</h2>
-					<div class="tool-list row">
+					<div class="about-tools__tool-list row">
 						<div
 							class="column lg-col-4 md-col-4 sm-col-6 xs-col-12"
 						>
@@ -545,7 +543,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="subcategory">
+				<div class="about-tools__subcategory">
 					<h2>
 						<span
 							><a href="/tools/JavaScript-Tools"
@@ -557,7 +555,7 @@
 							></span
 						>
 					</h2>
-					<div class="tool-list row">
+					<div class="about-tools__tool-list row">
 						<div
 							class="column lg-col-4 md-col-4 sm-col-6 xs-col-12"
 						>
@@ -587,7 +585,7 @@
 				</div>
 			</div>
 			<div>
-				<div class="subcategory">
+				<div class="about-tools__subcategory">
 					<h2>
 						<span
 							><a href="/tools/Code-Editing-Tools"
@@ -595,7 +593,7 @@
 							><!-- react-text: 11459 -->&nbsp;&gt;&nbsp;<!-- /react-text --></span
 						><span><span class="">Code Editors</span></span>
 					</h2>
-					<div class="tool-list row">
+					<div class="about-tools__tool-list row">
 						<div
 							class="column lg-col-4 md-col-4 sm-col-6 xs-col-12"
 						>
@@ -664,7 +662,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="subcategory">
+				<div class="about-tools__subcategory">
 					<h2>
 						<span
 							><a href="/tools/Code-Editing-Tools"
@@ -676,7 +674,7 @@
 							></span
 						>
 					</h2>
-					<div class="tool-list row">
+					<div class="about-tools__tool-list row">
 						<div
 							class="column lg-col-4 md-col-4 sm-col-6 xs-col-12"
 						>
@@ -751,7 +749,7 @@
 				</div>
 			</div>
 			<div>
-				<div class="subcategory">
+				<div class="about-tools__subcategory">
 					<h2>
 						<span
 							><a href="/tools/App-Frameworks">App Frameworks</a
@@ -762,7 +760,7 @@
 							></span
 						>
 					</h2>
-					<div class="tool-list row">
+					<div class="about-tools__tool-list row">
 						<div
 							class="column lg-col-4 md-col-4 sm-col-6 xs-col-12"
 						>
@@ -785,7 +783,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="subcategory">
+				<div class="about-tools__subcategory">
 					<h2>
 						<span
 							><a href="/tools/App-Frameworks">App Frameworks</a
@@ -797,7 +795,7 @@
 							></span
 						>
 					</h2>
-					<div class="tool-list row">
+					<div class="about-tools__tool-list row">
 						<div
 							class="column lg-col-4 md-col-4 sm-col-6 xs-col-12"
 						>
@@ -826,14 +824,14 @@
 				</div>
 			</div>
 			<div>
-				<div class="subcategory">
+				<div class="about-tools__subcategory">
 					<h2>
 						<span
 							><a href="/tools/Animation">Animation</a
 							><!-- react-text: 11557 -->&nbsp;&gt;&nbsp;<!-- /react-text --></span
 						><span><span class="">Animation Libraries</span></span>
 					</h2>
-					<div class="tool-list row">
+					<div class="about-tools__tool-list row">
 						<div
 							class="column lg-col-4 md-col-4 sm-col-6 xs-col-12"
 						>
@@ -882,7 +880,7 @@
 				</div>
 			</div>
 			<div>
-				<div class="subcategory">
+				<div class="about-tools__subcategory">
 					<h2>
 						<span
 							><a href="/tools/UI-Widget-and-Components"
@@ -890,7 +888,7 @@
 							><!-- react-text: 11582 -->&nbsp;&gt;&nbsp;<!-- /react-text --></span
 						><span><span class="">On Web Platform</span></span>
 					</h2>
-					<div class="tool-list row">
+					<div class="about-tools__tool-list row">
 						<div
 							class="column lg-col-4 md-col-4 sm-col-6 xs-col-12"
 						>
@@ -917,7 +915,7 @@
 				</div>
 			</div>
 			<div>
-				<div class="subcategory">
+				<div class="about-tools__subcategory">
 					<h2>
 						<span
 							><a href="/tools/Templating-Data-Binding"
@@ -925,7 +923,7 @@
 							><!-- react-text: 11599 -->&nbsp;&gt;&nbsp;<!-- /react-text --></span
 						><span><span class="">Just Templating</span></span>
 					</h2>
-					<div class="tool-list row">
+					<div class="about-tools__tool-list row">
 						<div
 							class="column lg-col-4 md-col-4 sm-col-6 xs-col-12"
 						>
@@ -972,7 +970,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="subcategory">
+				<div class="about-tools__subcategory">
 					<h2>
 						<span
 							><a href="/tools/Templating-Data-Binding"
@@ -984,7 +982,7 @@
 							></span
 						>
 					</h2>
-					<div class="tool-list row">
+					<div class="about-tools__tool-list row">
 						<div
 							class="column lg-col-4 md-col-4 sm-col-6 xs-col-12"
 						>
@@ -1009,7 +1007,7 @@
 				</div>
 			</div>
 			<div>
-				<div class="subcategory">
+				<div class="about-tools__subcategory">
 					<h2>
 						<span
 							><a href="/tools/Prototyping-and-Wireframing"
@@ -1021,7 +1019,7 @@
 							></span
 						>
 					</h2>
-					<div class="tool-list row">
+					<div class="about-tools__tool-list row">
 						<div
 							class="column lg-col-4 md-col-4 sm-col-6 xs-col-12"
 						>
@@ -1048,7 +1046,7 @@
 				</div>
 			</div>
 			<div>
-				<div class="subcategory">
+				<div class="about-tools__subcategory">
 					<h2>
 						<span
 							><a href="/tools/Tasking-(aka-Build)"
@@ -1058,7 +1056,7 @@
 							><span class="">Tasking / Build Tools</span></span
 						>
 					</h2>
-					<div class="tool-list row">
+					<div class="about-tools__tool-list row">
 						<div
 							class="column lg-col-4 md-col-4 sm-col-6 xs-col-12"
 						>
@@ -1083,14 +1081,14 @@
 				</div>
 			</div>
 			<div>
-				<div class="subcategory">
+				<div class="about-tools__subcategory">
 					<h2>
 						<span
 							><a href="/tools/Performance">Performance</a
 							><!-- react-text: 11674 -->&nbsp;&gt;&nbsp;<!-- /react-text --></span
 						><span><span class="">Checklist</span></span>
 					</h2>
-					<div class="tool-list row">
+					<div class="about-tools__tool-list row">
 						<div
 							class="column lg-col-4 md-col-4 sm-col-6 xs-col-12"
 						>
@@ -1120,7 +1118,7 @@
 				</div>
 			</div>
 			<div>
-				<div class="subcategory">
+				<div class="about-tools__subcategory">
 					<h2>
 						<a href="/tools/Module-Package-Repo"
 							>Module / Package Repo</a
@@ -1167,7 +1165,7 @@
 				</div>
 			</div>
 			<div>
-				<div class="subcategory">
+				<div class="about-tools__subcategory">
 					<h2>
 						<a href="/tools/Module-Package-Loading"
 							>Module / Package Loading</a
@@ -1218,7 +1216,7 @@
 				</div>
 			</div>
 			<div>
-				<div class="subcategory">
+				<div class="about-tools__subcategory">
 					<h2>
 						<span
 							><a href="/tools/Testing">Testing</a
@@ -1229,7 +1227,7 @@
 							></span
 						>
 					</h2>
-					<div class="tool-list row">
+					<div class="about-tools__tool-list row">
 						<div
 							class="column lg-col-4 md-col-4 sm-col-6 xs-col-12"
 						>
@@ -1258,7 +1256,7 @@
 				</div>
 			</div>
 			<div>
-				<div class="subcategory">
+				<div class="about-tools__subcategory">
 					<h2>
 						<span
 							><a href="/tools/Browser-Tools">Browser Tools</a
@@ -1270,7 +1268,7 @@
 							></span
 						>
 					</h2>
-					<div class="tool-list row">
+					<div class="about-tools__tool-list row">
 						<div
 							class="column lg-col-4 md-col-4 sm-col-6 xs-col-12"
 						>
@@ -1295,7 +1293,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="subcategory">
+				<div class="about-tools__subcategory">
 					<h2>
 						<span
 							><a href="/tools/Browser-Tools">Browser Tools</a
@@ -1306,7 +1304,7 @@
 							></span
 						>
 					</h2>
-					<div class="tool-list row">
+					<div class="about-tools__tool-list row">
 						<div
 							class="column lg-col-4 md-col-4 sm-col-6 xs-col-12"
 						>
@@ -1334,7 +1332,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="subcategory">
+				<div class="about-tools__subcategory">
 					<h2>
 						<span
 							><a href="/tools/Browser-Tools">Browser Tools</a
@@ -1346,7 +1344,7 @@
 							></span
 						>
 					</h2>
-					<div class="tool-list row">
+					<div class="about-tools__tool-list row">
 						<div
 							class="column lg-col-4 md-col-4 sm-col-6 xs-col-12"
 						>
@@ -1371,7 +1369,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="subcategory">
+				<div class="about-tools__subcategory">
 					<h2>
 						<span
 							><a href="/tools/Browser-Tools">Browser Tools</a
@@ -1382,7 +1380,7 @@
 							></span
 						>
 					</h2>
-					<div class="tool-list row">
+					<div class="about-tools__tool-list row">
 						<div
 							class="column lg-col-4 md-col-4 sm-col-6 xs-col-12"
 						>
@@ -1411,7 +1409,7 @@
 				</div>
 			</div>
 			<div>
-				<div class="subcategory">
+				<div class="about-tools__subcategory">
 					<h2>
 						<a href="/tools/Placeholder-Images-Text"
 							>Placeholder Images / Text</a
@@ -1442,7 +1440,7 @@
 				</div>
 			</div>
 			<div>
-				<div class="subcategory">
+				<div class="about-tools__subcategory">
 					<h2>
 						<a href="/tools/Project-Management-and-Code-Hosting"
 							>Project Management &amp; Code Hosting</a
@@ -1474,7 +1472,7 @@
 				</div>
 			</div>
 			<div>
-				<div class="subcategory">
+				<div class="about-tools__subcategory">
 					<h2>
 						<span
 							><a href="/tools/General-FE-Development"
@@ -1482,7 +1480,7 @@
 							><!-- react-text: 11841 -->&nbsp;&gt;&nbsp;<!-- /react-text --></span
 						><span><span class="">Development Tools</span></span>
 					</h2>
-					<div class="tool-list row">
+					<div class="about-tools__tool-list row">
 						<div
 							class="column lg-col-4 md-col-4 sm-col-6 xs-col-12"
 						>
@@ -1532,7 +1530,7 @@
 				</div>
 			</div>
 			<div>
-				<div class="subcategory">
+				<div class="about-tools__subcategory">
 					<h2>
 						<span
 							><a href="/tools/Fonts">Fonts </a
@@ -1543,7 +1541,7 @@
 							></span
 						>
 					</h2>
-					<div class="tool-list row">
+					<div class="about-tools__tool-list row">
 						<div
 							class="column lg-col-4 md-col-4 sm-col-6 xs-col-12"
 						>
@@ -1609,7 +1607,7 @@
 				</div>
 			</div>
 			<div>
-				<div class="subcategory">
+				<div class="about-tools__subcategory">
 					<h2>
 						<a href="/tools/Icons-and-emoji">Icons and emoji </a>
 					</h2>
@@ -1643,7 +1641,7 @@
 				</div>
 			</div>
 			<div>
-				<div class="subcategory">
+				<div class="about-tools__subcategory">
 					<h2>
 						<span
 							><a href="/tools/Inspiration-and-criticism-websites"
@@ -1651,7 +1649,7 @@
 							><!-- react-text: 11907 -->&nbsp;&gt;&nbsp;<!-- /react-text --></span
 						><span><span class="">Visual Design</span></span>
 					</h2>
-					<div class="tool-list row">
+					<div class="about-tools__tool-list row">
 						<div
 							class="column lg-col-4 md-col-4 sm-col-6 xs-col-12"
 						>
@@ -1686,7 +1684,7 @@
 				</div>
 			</div>
 			<div>
-				<div class="subcategory">
+				<div class="about-tools__subcategory">
 					<h2>
 						<span
 							><a href="/tools/Browser-features"
@@ -1696,7 +1694,7 @@
 							><span class="">Google Chrome DevTools</span></span
 						>
 					</h2>
-					<div class="tool-list row">
+					<div class="about-tools__tool-list row">
 						<div
 							class="column lg-col-4 md-col-4 sm-col-6 xs-col-12"
 						>
@@ -1758,7 +1756,7 @@
 				</div>
 			</div>
 			<div>
-				<div class="subcategory">
+				<div class="about-tools__subcategory">
 					<h2>
 						<a href="/tools/Prototyping-tools"
 							>Prototyping tools
@@ -1845,7 +1843,7 @@
 				</div>
 			</div>
 			<div>
-				<div class="subcategory">
+				<div class="about-tools__subcategory">
 					<h2>
 						<a href="/tools/Stock-photography"
 							>Stock photography
